@@ -1,0 +1,11 @@
+<h1>ATEEZ寫下歷史！成首支登上巴黎拉德芳斯體育館的K-pop藝人，全球巡演勢如破竹</h1>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/1l_r4ECGGsE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>根據KQ娛樂的消息，受歡迎的K-pop男團ATEEZ將繼續其世界巡演《Towards the Light: Will to Power》，並將在歐洲舉行12場演出，遍及9個國家，時間為2025年1月至2月。這次巡演的歐洲站將在法國拉開序幕。</p>
+<p>ATEEZ將在里昂、蘇黎世、曼徹斯特、巴塞隆拿和科隆舉行單獨演唱會，這是他們首次在這些城市舉行演出。值得注意的是，ATEEZ也將成為首支在巴黎拉德芳斯體育館舉行單獨演唱會的K-pop藝人，該體育館可容納約4萬人。</p>
+<p>在成功完成其北美巡演之後，ATEEZ於7月和8月在10個城市舉行了13場演出，吸引了約20萬名歌迷。該組合在洛杉磯的BMO體育場完成了其體育場首秀，並成為首支在德克薩斯州阿靈頓的全球人壽球場演出的K-pop男團。ATEEZ也是繼BTS之後第二支在紐約皇后區的花旗球場演出的K-pop組合。</p>
+<p>ATEEZ的成員也正在獲得全球認可，成為時尚偶像。他們出席了歐洲各地的2025年春夏時裝周活動。成員Hongjoong、Wooyoung和San分別出席了巴爾曼在巴黎的時裝秀、庫雷熱在巴黎的時裝秀和杜嘉班納在米蘭的時裝秀。San還受邀參加由傳奇超級巨星瑪丹娜在米蘭時裝周春夏2025舉辦的私人晚宴。</p>
+<p>ATEEZ將於10月2日發行其第四張日本單曲《Birthday》。</p>
+
+<p>資料來源： Korea Herald</p>
